--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -68,7 +68,7 @@ header a:hover{
 
 /* Showcase **/
 #login-section{
-  min-height: 400px;
+  height: 84vh;
   background: url('../img/showcase.jpg') no-repeat 0 -80px; 
 }
 
@@ -77,7 +77,7 @@ header a:hover{
   height: 20rem;
   padding: 40px 15px;
   box-sizing: content-box;
-  background: rgba(238, 216, 216, 0.3);
+  background: rgba(238, 216, 216, .3);
   margin: auto;
 }
 
@@ -121,7 +121,9 @@ button{
   cursor: pointer;
   border-radius: 20px;
   border: none;
+  width: 14rem;
   outline: none;
+  margin-left: 1.7rem;
 }
 
 button:hover{
@@ -151,8 +153,9 @@ button:hover{
 }
 
 #details .details-1 img{
-  width: 200px;
+  width: 10rem;
   border-radius: 100px;
+  height: 10rem;
 }
 
 /*userPage*/
@@ -337,7 +340,8 @@ footer{
   header #logo,
   header nav,
   header nav li,
-  #details .details-1{
+  #details .details-1,
+  .ul-container li{
       float: none;
       text-align: center;
       width: 100%;
